--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(serial_imu)
+project(forsense_imu)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 add_compile_options(-std=c++11)
@@ -111,7 +111,7 @@ generate_messages(DEPENDENCIES std_msgs)
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES serial_imu
+#  LIBRARIES forsense_imu
   CATKIN_DEPENDS roscpp rospy serial std_msgs message_runtime
 #  DEPENDS system_lib
 )
@@ -129,7 +129,7 @@ include_directories(
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/serial_imu.cpp
+#   src/${PROJECT_NAME}/forsense_imu.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -140,7 +140,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/serial_imu_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/forsense_imu_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -158,11 +158,11 @@ include_directories(
 # )
 
 
-add_executable(serial_imu src/serial_imu.cpp src/serial_parse.cpp)
-target_link_libraries(serial_imu ${catkin_LIBRARIES})
+add_executable(forsense_imu src/forsense_imu.cpp src/serial_parse.cpp)
+target_link_libraries(forsense_imu ${catkin_LIBRARIES})
 
-add_dependencies(serial_imu ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-add_dependencies(serial_imu ${PROJECT_NAME}_generate_messages_cpp)
+add_dependencies(forsense_imu ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(forsense_imu ${PROJECT_NAME}_generate_messages_cpp)
 
 
 
@@ -213,7 +213,7 @@ add_dependencies(serial_imu ${PROJECT_NAME}_generate_messages_cpp)
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_serial_imu.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_forsense_imu.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
